--- a/frontend/ai_feedback.html
+++ b/frontend/ai_feedback.html
@@ -19,11 +19,7 @@
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="ops-main flex-1 min-w-0 overflow-x-auto space-y-6">
-                    <header class="page-header">
-                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">AI Feedback</h1>
-            </header>
-        <p class="mb-4">Request an AI-generated overview of your finances for the last 12 months.</p>
-        <section>
+<section>
             <button id="run" class="bg-indigo-600 text-white px-4 py-2 rounded">
                 <i class="fas fa-comments-dollar inline w-4 h-4 mr-1"></i>Generate Feedback
             </button>
@@ -40,7 +36,16 @@
         </section>
     </main>
 </div>
-<script src="js/menu.js"></script>
+<script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'AI Feedback',
+    breadcrumb: 'AI',
+    subtitle: 'Request an AI-generated overview of your finances for the last 12 months.'
+});
+</script>
+    <script src="js/menu.js"></script>
 <script src="js/input_help.js"></script>
 <script src="js/overlay.js"></script>
 <script>
