--- a/frontend/group_dashboard.html
+++ b/frontend/group_dashboard.html
@@ -22,10 +22,7 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-                        <header class="page-header">
-                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Group Dashboard</h1>
-            </header>
-            <p class="mb-4">Review group spending by month and year to see how different areas of your budget change over time.</p>
+<p class="mb-4">Review group spending by month and year to see how different areas of your budget change over time.</p>
             <label for="year-select" class="block">Year:
                 <select id="year-select" class="border p-2 rounded w-full" data-help="Select year"></select>
             </label>
@@ -43,6 +40,15 @@
             </div>
         </main>
     </div>
+    <script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'Group Dashboard',
+    breadcrumb: 'Dashboards / Groups',
+    subtitle: 'Track performance and balances by transaction group.'
+});
+</script>
     <script src="js/menu.js"></script>
     <script src="js/input_help.js"></script>
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
