--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -21,10 +21,7 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-                        <header class="page-header">
-                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Monthly Dashboard</h1>
-            </header>
-            <p class="mb-4">View income and outgoings for a chosen month. Compare different months to spot trends and track progress toward your goals.</p>
+<p class="mb-4">View income and outgoings for a chosen month. Compare different months to spot trends and track progress toward your goals.</p>
             <section class="ops-section">
                 <form class="ops-form-grid cols-3" aria-label="Monthly dashboard filters">
                     <label for="year-select" class="ops-field"><span class="ops-label">Year</span>
@@ -98,6 +95,15 @@
             </section>
         </main>
     </div>
+    <script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'Monthly Dashboard',
+    breadcrumb: 'Dashboards / Monthly',
+    subtitle: 'Review monthly income, expenses, and trends with chart and table summaries.'
+});
+</script>
     <script src="js/menu.js"></script>
     <script src="js/input_help.js"></script>
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
