--- a/frontend/account.html
+++ b/frontend/account.html
@@ -22,12 +22,8 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-                        <header class="page-header">
-                <h1 id="account-name" class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Account Balance</h1>
-            </header>
-            <p id="account-details" class="mb-4 text-gray-600"></p>
-            <p class="mb-4">View the balance over time based on the latest bank statement.</p>
-            <div class="cards">
+<p id="account-details" class="mb-4 text-gray-600"></p>
+<div class="cards">
                 <div id="balance-chart" style="height:400px" data-chart-desc="Line chart of account balance over time."></div>
             </div>
 
@@ -37,6 +33,15 @@
 
         </main>
     </div>
+    <script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'Account Balance',
+    breadcrumb: 'Accounts',
+    subtitle: 'View the balance over time based on the latest bank statement.'
+});
+</script>
     <script src="js/menu.js"></script>
     <script src="js/input_help.js"></script>
 
@@ -74,7 +79,7 @@
                     document.getElementById('balance-chart').textContent = 'Account not found.';
                     return;
                 }
-                document.getElementById('account-name').textContent = data.name;
+                window.updatePageHeader(pageMain, { title: data.name });
                 const details = data.sort_code ? `Sort Code: ${data.sort_code}  Account Number: ${data.account_number}` : `Card Number: ${data.account_number}`;
                 document.getElementById('account-details').textContent = details;
                 const dates = data.history.map(h => h.date);
