--- a/frontend/dedupe.html
+++ b/frontend/dedupe.html
@@ -20,10 +20,7 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-                        <header class="page-header">
-                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Duplicate Transactions</h1>
-            </header>
-            <p class="mb-4">Remove unwanted duplicate entries to keep your records accurate.</p>
+<p class="mb-4">Remove unwanted duplicate entries to keep your records accurate.</p>
             <div class="cards">
                 <div class="mb-4 space-x-2">
                     <button id="refresh" class="bg-indigo-600 text-white px-3 py-1 rounded"><i class="fas fa-rotate inline w-4 h-4 mr-1"></i>Refresh</button>
@@ -36,6 +33,15 @@
             </div>
         </main>
     </div>
+    <script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'Duplicate Transactions',
+    breadcrumb: 'Transactions / Data Quality',
+    subtitle: 'Review potential duplicate transactions and remove any accidental repeats.'
+});
+</script>
     <script src="js/menu.js"></script>
     <script src="js/input_help.js"></script>
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
