--- a/frontend/export.html
+++ b/frontend/export.html
@@ -19,10 +19,7 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto space-y-6">
-                        <header class="page-header">
-                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Exports</h1>
-            </header>
-            <p class="mb-4">Download transactions for a chosen period in your preferred format.</p>
+<p class="mb-4">Download transactions for a chosen period in your preferred format.</p>
             <section class="space-y-4">
                 <h2 class="text-xl font-semibold">Create Export</h2>
                 <div class="flex flex-col md:flex-row md:space-x-4 space-y-4 md:space-y-0">
@@ -49,6 +46,15 @@
         </main>
     </div>
 
+    <script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'Exports',
+    breadcrumb: 'Data Management',
+    subtitle: 'Export transactions and related data in CSV, OFX, or XLSX formats.'
+});
+</script>
     <script src="js/menu.js"></script>
     <script src="js/input_help.js"></script>
     <script src="js/overlay.js"></script>
