--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -22,10 +22,7 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-                        <header class="page-header">
-                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Application Logs</h1>
-            </header>
-            <p class="mb-4">Review recent log entries to monitor system activity. Filtering by time or keyword helps you trace what happened during a specific event.</p>
+<p class="mb-4">Review recent log entries to monitor system activity. Filtering by time or keyword helps you trace what happened during a specific event.</p>
             <div class="mb-4 flex items-center space-x-2">
                 <label class="text-sm">Days to keep/show:
                     <input type="number" id="log-days" value="30" class="border p-1 w-20 rounded ml-1" data-help="Number of days of log entries to display and retain when pruning">
@@ -37,6 +34,15 @@
         </main>
     </div>
 
+    <script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'Application Logs',
+    breadcrumb: 'Administration',
+    subtitle: 'Inspect application log output to troubleshoot issues.'
+});
+</script>
     <script src="js/menu.js"></script>
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
     <script src="js/tabulator-tailwind.js"></script>
