--- a/frontend/pivot.html
+++ b/frontend/pivot.html
@@ -22,10 +22,7 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto space-y-6">
-                        <header class="page-header">
-                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Pivot Analysis</h1>
-            </header>
-            <p class="mb-4">Explore transactions using a flexible pivot table. Choose a year or analyse all recorded data.</p>
+<p class="mb-4">Explore transactions using a flexible pivot table. Choose a year or analyse all recorded data.</p>
             <section class="cards cards-tight space-y-4">
                 <div class="flex flex-col md:flex-row md:items-end md:space-x-4 space-y-4 md:space-y-0">
                     <div class="flex flex-col">
@@ -55,6 +52,15 @@
             </section>
         </main>
     </div>
+    <script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'Pivot Analysis',
+    breadcrumb: 'Reports & Analysis',
+    subtitle: 'Explore transaction data with pivoted summaries across key dimensions.'
+});
+</script>
     <script src="js/menu.js"></script>
     <script src="js/input_help.js"></script>
     <script src="js/overlay.js"></script>
