--- a/frontend/project_add.html
+++ b/frontend/project_add.html
@@ -20,10 +20,7 @@
 <div class="flex min-h-screen">
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="ops-main flex-1 min-w-0 overflow-x-auto space-y-6">
-                    <header class="page-header">
-                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Add Project</h1>
-            </header>
-        <p class="mb-4">Capture ideas for home projects and detail their costs and benefits.</p>
+<p class="mb-4">Capture ideas for home projects and detail their costs and benefits.</p>
 
         <section class="cards">
             <h2 class="text-xl font-semibold mb-4">Project Details</h2>
@@ -69,7 +66,16 @@
     </main>
 </div>
 
-<script src="js/menu.js"></script>
+<script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'Add Project',
+    breadcrumb: 'Projects',
+    subtitle: 'Create a new project and set its core details and benefit assumptions.'
+});
+</script>
+    <script src="js/menu.js"></script>
 <script src="js/input_help.js"></script>
 <script>
 async function loadProject(){
