--- a/frontend/yearly_dashboard.html
+++ b/frontend/yearly_dashboard.html
@@ -21,11 +21,7 @@
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
-                        <header class="page-header">
-                <h1 class="text-2xl font-semibold mb-4 text-indigo-700 page-title">Yearly Dashboard</h1>
-            </header>
-            <p class="mb-4">Analyse totals for a single year through charts and tables to understand how income and spending evolved month by month.</p>
-            <section class="ops-section">
+<section class="ops-section">
                 <form class="ops-form-grid cols-2" aria-label="Yearly dashboard filters">
                     <label for="year-select" class="ops-field"><span class="ops-label">Year</span>
                         <select id="year-select" class="ops-select" data-help="Select year to display"></select>
@@ -79,6 +75,15 @@
             </section>
         </main>
     </div>
+    <script src="js/page_header.js"></script>
+    <script>
+const pageMain = document.querySelector('main.ops-main');
+window.renderPageHeader(pageMain, {
+    title: 'Yearly Dashboard',
+    breadcrumb: 'Dashboards / Yearly',
+    subtitle: 'Analyse totals for a single year through charts and tables to understand how income and spending evolved month by month.'
+});
+</script>
     <script src="js/menu.js"></script>
     <script src="js/input_help.js"></script>
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
